# lang

./: .rustfmt.toml  Cargo.toml  README  lib.rs
codepoints/: Cargo.toml  interface.rs  lib.rs
lexical-analysis/: Cargo.toml  algorithms.rs  error.rs  io.rs  lib.rs
lexical-analysis/comment/: error.rs  mod.rs  output.rs  state.rs
lexical-analysis/delimiter/: boundary_pairs.rs  error.rs  macro.rs  mod.rs  operator.rs  output.rs  symbol.rs
lexical-analysis/identifier/: error.rs  mod.rs  output.rs
lexical-analysis/keyword/: error.rs  macro.rs  mod.rs
lexical-analysis/literal/: bool.rs  error.rs  int.rs  mod.rs  output.rs  state.rs  string.rs
location/: Cargo.toml  interface.rs  lib.rs
stream/: Cargo.toml  byte.rs  input.rs  iterator.rs  lib.rs  queue.rs  token.rs
