[package]
name = "lang-lexer"
version = "0.1.9"
license-file = "../LICENSE"
edition = "2021"

[features]
default = ["comment", "delimiter", "keyword"]
comment = []
delimiter = []
keyword = []

[lib]
path = "./lib.rs"

[dependencies]
codepoints = { path = "../codepoints", package = "lang-codepoints" }
location = { path = "../location", package = "lang-location" }
stream = { path = "../stream", package = "lang-stream" }
