[package]
name = "lang-lexer"
version = "0.5.4"
license-file = "../LICENSE"
edition = "2021"

[features]
default = ["comment", "delimiter", "keyword", "identifier", "literal"]
comment = []
delimiter = []
keyword = []
identifier = []
literal = []

[lib]
path = "./lib.rs"

[dependencies]
codepoints = { path = "../codepoints", package = "lang-codepoints" }
location = { path = "../location", package = "lang-location" }
stream = { path = "../stream", package = "lang-stream" }
